Closed Bug 1741837 Opened 3 years ago Closed 3 years ago

[Linux] D&D does not work from external sources

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

D&D widget was moved from mContainer to mShell so we need to check mShell instead of mContainer for cross applications D&D.

Set release status flags based on info from the regressing bug 1710344

Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/98d3152993c2
[Linux] Check mShell instead of mContainer for cross application D&D, r=emilio
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Blocks: 1741467
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: