Bug 1741837 [Linux] Check mShell instead of mContainer for cross application D&D, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D131486